[project]
name = "polymarket-cs2-alerts"
version = "0.1.0"
description = "Realtime Telegram alerts for large Polymarket CS2 bets."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.11",
    "aiogram>=3.15.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "websockets>=14.1",
]

[project.scripts]
polymarket-cs2-alerts = "polymarket_cs2_alerts.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polymarket_cs2_alerts"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
